@@ -46,5 +46,5 @@ regular_CXXFLAGS="-D_FILE_OFFSET_BITS=64 \
 AC_SUBST([regular_CFLAGS])
 AC_SUBST([regular_CXXFLAGS])
 AC_SUBST([regular_LIBS])
-AC_CONFIG_FILES([Makefile src/Makefile libHX.pc])
+AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile libHX.pc])
 AC_OUTPUT
