@@ -1,0 +1,3 @@
+# -*- Makefile -*-
+
+doc_DATA = libHX_Documentation.pdf
